# Halo

./: .gitignore  README.md  env_example  pyproject.toml  requirements.txt  smoke_results.json
notebooks/: evaluation.ipynb
react_components/result-grid/: .streamlit-component.toml  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
react_components/result-grid/src/: ResultGrid.tsx  main.tsx  style.css
scripts/: download_sample_photos.py  smoke_test.py
src/halo/: __init__.py  albums.py  albums.py.broken  config.py  embeddings.py  ingestion.py  llm_utils.py  search.py  ui.py
src/halo/components/: __init__.py  results_grid.py
